<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_main_label"
        >
        <ListPreference
            android:defaultValue="@string/pref_units_metric"
            android:entries="@array/pref_units_options"
            android:entryValues="@array/pref_units_values"
            android:key="@string/pref_units_key"
            android:title="@string/pref_units_label"
            />

        <ListPreference
            android:defaultValue="@string/pref_language_en"
            android:entries="@array/pref_language_options"
            android:entryValues="@array/pref_language_value"
            android:key="@string/pref_language_key"
            android:title="@string/pref_language_label"
            />


    </PreferenceCategory>

</PreferenceScreen>